package com.andreysankov.itmoprog2sem.util;

public interface LineInput {
    String readLine(String prompt);
}
