' Generated by UML Generator
' Encoded: hLXBSzis4BxhLs2c5wgHFErLqthYo6sjZjsuLjmaq-a18Y4RCKam86XRITFVtiM3v2v9nVA45msnZsyVM2mMUbaQhasLfPFoJkO5rpnZSShByiGOBJUL4QjOvMlvIR0V9hSo4IoMEax5PEAas4cIB5MMyJnXdoUClMZN4UWPyMWMREa_ffOl7aKCe94M7ojH0lFAVqpjLrcel1IJBmXyjRsGUTS29evXvbveVYDURo-5BbNEqpyhdaeZZIWl-AFCgemwSAZu2AujKy4riOuftsI0RqgZUMnOi8ICp7EUYGLRGmNaDtQTY3BMiZ1IvPZSDMzfS-Vaj_h7s7UbC7-06n7s1KJkbKm2-xJrAXhmi1L-SIDCy22QOcyjmncPeh0i4KCJdb7-6r6RpVhbKHgoLuWmGYtyfbLLB5ML6x3wQhVKWbl_JhaHnEhJSYCuSoRIWbX5X37WPMcKtb4BX3Q2aLM-LSG28em0VmdLONwL8ariDOayWUqubMKiYrJcTCiE4Xt1fIkHgNlnQhUYJRj77itKkNeGUi0MfezWRCtlIKBdY10vkCzmpnaPVs4bSFeM-uTvVQiUYEE8C8B7rqK2vx6p3ntYABlWU3ufRGw4bZpz2wulw0lNgzC5IrL-mtvcFvxxjkxClzaLOb7V2tPXULpVL9d8mUn9-5hP3ZjF-UP1wRi5E-URj_3HN0N1WsWVw8mDGSvO5t3QzF56rVTox9uLg44ib_XecG7Cybf7lzhKwvm-BuLb5SUYB1TienHSsBcbPK20kG5Ve253taBabHgT6Ujek1J8SksnhRCjkWtkmeiVVc6rwNbUTBpHWpGg7ueEKLpiYRAr5Sc4H0IUNr7btdKCIjDWgXsDbDBG9-70bDxxnzQPtO91GqNZI2Fgkm4c1BKPyqgE3yF5kvg1nWWWlu-261aktZNk-VLxkxOUDDwstNnumaf5R2ejpbIbopOEE0IbkybfF2sO3mUjCIuSeXwgErW8S_grAUWSgNSYFAzHwaXjP_e8Wt0PgSs71Nkz-G3Aj4HlUNcxL8de9ISSHPyPMnrfYB-RfRZTjmKk0CT3Syw2sLztw6GkCvvUAecIMD31lPdRGKrLczGf9dAxbN6L6jZlq-RRS-fiBz2sDflJj1Yyg8EQCRf1-m82JYySw0VTO6RigL1cR3WGInyAmtaDlHfUWkADYfIv5RhjmSrM3tGLVpx2yKvx1yT642LDCFJy-FETjkKrM8xa67VttqtjriQqsNpN4r7AKAa2vt9FvXn0NGOEjKcQO-5QyEpsC9A2QChxztDOhlAY2lSmx6pYiWhaA_VT54yh6lMbwhFQKjoXn2Wlh9QbH8M6JJJeBTHj_c5FtsfUG15vpr9FSw1t8Zc30xiMvgSWUjojyQ1BIhscFG4r7RYGzzcqvLFBFGKRoWgYX9qMUijZmMZw_piyHMjt3SfFxY1U6vc6cwPFxmwPGK3OPWXz4FV3dH5__qEauUtQoCC9uRNGj5Qp7g4_MkRpVu_hmGVJZuwEwu6lJmwJOVSlbIuMONO01tWrwi7_e51x1wiHJvwf5NmaVwKGDmW7MnfWr613qaE2-3y1OXGpC4gV7f0EUFuJ0mV8Oxi7YmTty1y0n2vcO0DzUer4t_eKZF88tX0hGEANFS7330pMfmUamnxnnCPXAjZwSpI2N_sNFF6XpyRszd49Ddcw3u0JVXzzW1tWySkQu6861kpJ0rBt4KtGkaoCECnhmlTlvk_dS_o0nEJwxLWFhfQ6nn5CHnD1JRRcQWWq71mTWVlDSjAve1Mo-n9gfChI_m4
' URL: http://www.plantuml.com/plantuml/uml/hLXBSzis4BxhLs2c5wgHFErLqthYo6sjZjsuLjmaq-a18Y4RCKam86XRITFVtiM3v2v9nVA45msnZsyVM2mMUbaQhasLfPFoJkO5rpnZSShByiGOBJUL4QjOvMlvIR0V9hSo4IoMEax5PEAas4cIB5MMyJnXdoUClMZN4UWPyMWMREa_ffOl7aKCe94M7ojH0lFAVqpjLrcel1IJBmXyjRsGUTS29evXvbveVYDURo-5BbNEqpyhdaeZZIWl-AFCgemwSAZu2AujKy4riOuftsI0RqgZUMnOi8ICp7EUYGLRGmNaDtQTY3BMiZ1IvPZSDMzfS-Vaj_h7s7UbC7-06n7s1KJkbKm2-xJrAXhmi1L-SIDCy22QOcyjmncPeh0i4KCJdb7-6r6RpVhbKHgoLuWmGYtyfbLLB5ML6x3wQhVKWbl_JhaHnEhJSYCuSoRIWbX5X37WPMcKtb4BX3Q2aLM-LSG28em0VmdLONwL8ariDOayWUqubMKiYrJcTCiE4Xt1fIkHgNlnQhUYJRj77itKkNeGUi0MfezWRCtlIKBdY10vkCzmpnaPVs4bSFeM-uTvVQiUYEE8C8B7rqK2vx6p3ntYABlWU3ufRGw4bZpz2wulw0lNgzC5IrL-mtvcFvxxjkxClzaLOb7V2tPXULpVL9d8mUn9-5hP3ZjF-UP1wRi5E-URj_3HN0N1WsWVw8mDGSvO5t3QzF56rVTox9uLg44ib_XecG7Cybf7lzhKwvm-BuLb5SUYB1TienHSsBcbPK20kG5Ve253taBabHgT6Ujek1J8SksnhRCjkWtkmeiVVc6rwNbUTBpHWpGg7ueEKLpiYRAr5Sc4H0IUNr7btdKCIjDWgXsDbDBG9-70bDxxnzQPtO91GqNZI2Fgkm4c1BKPyqgE3yF5kvg1nWWWlu-261aktZNk-VLxkxOUDDwstNnumaf5R2ejpbIbopOEE0IbkybfF2sO3mUjCIuSeXwgErW8S_grAUWSgNSYFAzHwaXjP_e8Wt0PgSs71Nkz-G3Aj4HlUNcxL8de9ISSHPyPMnrfYB-RfRZTjmKk0CT3Syw2sLztw6GkCvvUAecIMD31lPdRGKrLczGf9dAxbN6L6jZlq-RRS-fiBz2sDflJj1Yyg8EQCRf1-m82JYySw0VTO6RigL1cR3WGInyAmtaDlHfUWkADYfIv5RhjmSrM3tGLVpx2yKvx1yT642LDCFJy-FETjkKrM8xa67VttqtjriQqsNpN4r7AKAa2vt9FvXn0NGOEjKcQO-5QyEpsC9A2QChxztDOhlAY2lSmx6pYiWhaA_VT54yh6lMbwhFQKjoXn2Wlh9QbH8M6JJJeBTHj_c5FtsfUG15vpr9FSw1t8Zc30xiMvgSWUjojyQ1BIhscFG4r7RYGzzcqvLFBFGKRoWgYX9qMUijZmMZw_piyHMjt3SfFxY1U6vc6cwPFxmwPGK3OPWXz4FV3dH5__qEauUtQoCC9uRNGj5Qp7g4_MkRpVu_hmGVJZuwEwu6lJmwJOVSlbIuMONO01tWrwi7_e51x1wiHJvwf5NmaVwKGDmW7MnfWr613qaE2-3y1OXGpC4gV7f0EUFuJ0mV8Oxi7YmTty1y0n2vcO0DzUer4t_eKZF88tX0hGEANFS7330pMfmUamnxnnCPXAjZwSpI2N_sNFF6XpyRszd49Ddcw3u0JVXzzW1tWySkQu6861kpJ0rBt4KtGkaoCECnhmlTlvk_dS_o0nEJwxLWFhfQ6nn5CHnD1JRRcQWWq71mTWVlDSjAve1Mo-n9gfChI_m4
' Generated on: 2026-04-04T13:57:45.832441200

@startuml
skinparam classAttributeIconSize 0
hide circle

class AddCommand {
  +AddCommand(context: Context)
  +execute(request: Request): Response
}

class AddIfMinCommand {
  +AddIfMinCommand(context: Context)
  +execute(request: Request): Response
}

class AverageOfPersonalQualititesMaximumCommand {
  +AverageOfPersonalQualititesMaximumCommand(context: Context)
  +execute(request: Request): Response
}

class ClearCommand {
  +ClearCommand(context: Context)
  +execute(request: Request): Response
}

abstract class Command {
  -name: String
  -description: String
  -context: Context
  --
  +Command(context: Context)
  +execute(request: Request): Response
  #setName(name: String): void
  #setDescription(description: String): void
  +getContext(): Context
  +getName(): String
  +getDescription(): String
  +toString(): String
}

class ExitCommand {
  +ExitCommand(context: Context)
  +execute(request: Request): Response
}

class GroupCountingByCreationDateCommand {
  +GroupCountingByCreationDateCommand(context: Context)
  +execute(request: Request): Response
}

class HelpCommand {
  +HelpCommand(context: Context)
  +execute(request: Request): Response
}

class HistoryCommand {
  +HistoryCommand(context: Context)
  +execute(request: Request): Response
}

class InfoCommand {
  +InfoCommand(context: Context)
  +execute(request: Request): Response
}

class PrintFieldDescendingDisciplineCommand {
  +PrintFieldDescendingDisciplineCommand(context: Context)
  +execute(request: Request): Response
}

class RemoveByIdCommand {
  +RemoveByIdCommand(context: Context)
  +execute(request: Request): Response
}

class RemoveLowerCommand {
  +RemoveLowerCommand(context: Context)
  +execute(request: Request): Response
}

class SaveCommand {
  -SaveCommand()
  +{static} save(context: Context): String
}

class ShowCommand {
  +ShowCommand(context: Context)
  +execute(request: Request): Response
}

class UpdateIdCommand {
  +UpdateIdCommand(context: Context)
  +execute(request: Request): Response
}

class Request {
  -{static} serialVersionUID: long = 1L
  -commandType: CommandType
  -argument: ArgumentId
  -labwork: LabWork
  --
  +Request(commandType: CommandType, argument: ArgumentId, labwork: LabWork)
  +getCommandType(): CommandType
  +getArgument(): ArgumentId
  +getLabWork(): LabWork
  +toString(): String
}

class Response {
  -{static} serialVersionUID: long = 1L
  -success: boolean
  -message: String
  --
  +Response(succes: boolean, message: String)
  +isSuccess(): boolean
  +getMessage(): String
  +toString(): String
}

class ArgumentId {
  -{static} serialVersionUID: long = 1L
  -argumentId: Long
  -responseMessage: String
  --
  +ArgumentId(id: String)
  +getResponseMessage(): String
  +getId(): Long
}

class Coordinates {
  -x: Long
  -y: int
  --
  +Coordinates()
  +Coordinates(x: Long, y: int)
  +setX(x: Long): void
  +setY(y: int): void
  +getX(): Long
  +getY(): int
}

class Discipline {
  -name: String
  -lectureHours: Long
  -labsCount: int
  --
  +Discipline()
  +Discipline(name: String, lectureHours: Long, labsCount: int)
  +getName(): String
  +getLectureHours(): Long
  +getLabsCount(): int
  +equals(obj: Object): boolean
  +hashCode(): int
}

class LabWork {
  -id: long
  -name: String
  -coordinates: Coordinates
  -creationDate: Date
  -minimalPoint: int
  -personalQualitiesMaximum: Double
  -difficulty: Difficulty
  -discipline: Discipline
  --
  +LabWork()
  +LabWork(id: long, name: String, coordinates: Coordinates, creationDate: Date, minimalPoint: int, personalQualitiesMaximum: Double, difficulty: Difficulty, discipline: Discipline)
  +compareTo(other: LabWork): int
  +toString(): String
  +setId(id: long): void
  +setDate(date: Date): void
  +getId(): long
  +getName(): String
  +getCoordinates(): Coordinates
  +getDate(): Date
  +getMinimalPoint(): int
  +getPersonalQualitiesMaximum(): Double
  +getDifficulty(): Difficulty
  +getDiscipline(): Discipline
}

class JLineInput {
  -reader: LineReader
  --
  +JLineInput(reader: LineReader)
  +getLineReader(): LineReader
  +readLine(prompt: String): String
}

class LabWorkWrapper {
  -labWork: LinkedHashSet<LabWork>
  --
  +LabWorkWrapper()
  +LabWorkWrapper(labWork: LinkedHashSet<LabWork>)
  +getLabWork(): LinkedHashSet<LabWork>
  +setLabWork(labWork: LinkedHashSet<LabWork>): void
}

interface LineInput {
  ~readLine(prompt: String): String
}

class SerializationUtils {
  -SerializationUtils()
  +{static} serialize(object: Object): byte[]
  +{static} deserialize(data: byte[]): Object
}

AddCommand --|> Command
AddCommand ..> Request
AddCommand ..> Response
AddIfMinCommand --|> Command
AddIfMinCommand ..> Request
AddIfMinCommand ..> Response
AverageOfPersonalQualititesMaximumCommand --|> Command
AverageOfPersonalQualititesMaximumCommand ..> Request
AverageOfPersonalQualititesMaximumCommand ..> Response
ClearCommand --|> Command
ClearCommand ..> Request
ClearCommand ..> Response
Command ..> Request
Command ..> Response
ExitCommand --|> Command
ExitCommand ..> Request
ExitCommand ..> Response
GroupCountingByCreationDateCommand --|> Command
GroupCountingByCreationDateCommand ..> Request
GroupCountingByCreationDateCommand ..> Response
HelpCommand --|> Command
HelpCommand ..> Request
HelpCommand ..> Response
HistoryCommand --|> Command
HistoryCommand ..> Request
HistoryCommand ..> Response
InfoCommand --|> Command
InfoCommand ..> Request
InfoCommand ..> Response
PrintFieldDescendingDisciplineCommand --|> Command
PrintFieldDescendingDisciplineCommand ..> Request
PrintFieldDescendingDisciplineCommand ..> Response
RemoveByIdCommand --|> Command
RemoveByIdCommand ..> Request
RemoveByIdCommand ..> Response
RemoveLowerCommand --|> Command
RemoveLowerCommand ..> Request
RemoveLowerCommand ..> Response
ShowCommand --|> Command
ShowCommand ..> Request
ShowCommand ..> Response
UpdateIdCommand --|> Command
UpdateIdCommand ..> Request
UpdateIdCommand ..> Response
Request *-- ArgumentId
Request *-- LabWork
LabWork *-- Coordinates
LabWork *-- Discipline
LabWork ..> LabWork
JLineInput ..|> LineInput
LabWorkWrapper o-- LabWork
@enduml